--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ h1, h2, h3, h4, h5, h6 {
     /*display: flex;*/
     /*flex-direction: column;*/
     margin: 0;
-    width: 370px;
+    max-width: 370px;
     text-align: center;
 }
 
@@ -417,7 +417,6 @@ h1, h2, h3, h4, h5, h6 {
 .footer .container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-areas: "contacts nav socials";
 }
 
 
@@ -492,5 +491,210 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 8px;
 }
 
+@media (max-width: 1125px) {
+    .welcome_desc {
+        opacity: 1;
+    }
+
+}
+
+@media (max-width: 950px) {
+    .order .container {
+        flex-direction: column;
+        padding-right: 15px;
+    }
+
+    .order_text {
+        text-align: center;
+    }
+
+    .order .btn {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 829px) {
+    .footer .container {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:"nav nav"
+                          "contacts socials";;
+        justify-items: center;
+        gap: 40px 150px;
+    }
+
+    .footer_contacts {
+        grid-area: contacts;
+        justify-self: end;
+    }
+
+    .footer_nav {
+        grid-area: nav;
+    }
+
+    .footer_socials {
+        grid-area: socials;
+        align-self: center;
+        justify-self: start;
+    }
+}
 
 
+@media (max-width: 829px) {
+    .food-list .container {
+        justify-content: space-evenly;
+    }
+
+    .footer_list {
+        gap: 80px;
+    }
+
+    .feedback {
+        padding-bottom: 100px;
+    }
+
+    .footer {
+        padding: 60px 0;
+    }
+}
+
+@media (max-width: 760px) {
+    .feedback_img {
+        width: 250px;
+    }
+}
+
+@media (max-width: 650px) {
+    .header .btn {
+        display: none;
+    }
+
+    .download_title {
+        font-size: 30px;
+    }
+
+    .welcome_text {
+        width: 100%;
+    }
+
+    .welcome_title {
+        font-size: 40px;
+    }
+
+    .welcome_desc {
+        margin: 20px 0;
+    }
+
+    .welcome {
+        padding: 200px 0 100px;
+        min-height: auto;
+    }
+
+    .product {
+        padding: 60px 0 100px;
+    }
+
+    .product .container {
+        padding: 10px 0 60px;
+    }
+
+    .product_card {
+        width: 100%;
+        padding-left: 50%;
+    }
+
+    .product_card:nth-child(even) {
+        padding-right: 50%;
+    }
+}
+
+@media (max-width: 500px) {
+    .header .container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .header_list {
+        flex-direction: column;
+        text-align: center;
+        gap: 10px;
+    }
+
+    .welcome {
+        margin-top: -240px;
+        padding-top: 280px;
+        padding-bottom: 80px;
+    }
+
+    .welcome_title {
+        font-size: 30px;
+    }
+
+    .welcome_subtitle {
+    }
+
+    .welcome_desc {
+        font-size: 12px;
+    }
+
+    .food-list {
+        padding: 60px 0;
+    }
+
+    .order_title {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .order_img {
+        width: 100%;
+    }
+
+    .feedback .container {
+        flex-direction: column;
+    }
+
+    .feedback, .product {
+        padding-bottom: 60px;
+    }
+
+    .download .container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer_contacts {
+        align-items: center;
+    }
+
+    .footer_socials-icons {
+        display: flex;
+        justify-content: center;
+    }
+
+    .footer_list {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .footer .footer_title {
+        margin-bottom: 10px;
+    }
+
+    .footer_list-item + .footer_list-item {
+        margin-top: 7px;
+    }
+
+    .footer_logo {
+        margin-bottom: 10px;
+    }
+}
